--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,5 @@
-<p>welcome works!</p>
+<div class="center">
+    <h2>{{title}}</h2>
+    <button type="button" class="btn btn-primary btn-lg button-size">Login</button>
+    <button type="button" class="btn btn-secondary btn-lg button-size" routerLink="/register">Register</button>
+</div>
