add formbuilder and basic html form

--- a/src/app/user-self-service/register/register.component.html
+++ b/src/app/user-self-service/register/register.component.html
@@ -1,1 +1,38 @@
-<p class="h2">register works!</p>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()" novalidate>
+
+  <p>
+    <label for="forenames">Forenames</label>
+    <input type="text" id="forenames" name="forenames" formControlName="forenames">
+  </p>
+
+  <p>
+    <label for="surname">Surname</label>
+    <input type="text" id="surname" name="surname" formControlName="surname">
+  </p>
+
+  <p>
+    <label for="emailAddress">Email</label>
+    <input type="text" id="emailAddress" name="emailAddress" formControlName="emailAddress">
+  </p>
+
+  <p>
+    <label for="telephone">Telephone</label>
+    <input type="text" id="telephone" name="telephone" formControlName="telephone">
+  </p>
+
+  <p>
+    <label for="dateOfBirth">Date of birth</label>
+    <input type="date" id="dateOfBirth" name="dateOfBirth" formControlName="dateOfBirth">
+  </p>
+
+  <p>
+    <label for="password">Password</label>
+    <input type="text" id="password" name="password" formControlName="password">
+  </p>
+
+  <p>
+    <button type="submit">Submit</button>
+  </p>
+
+  {{registerForm.value | json}}
+</form>
